Week2 - full commit

--- a/week2/hello.html
+++ b/week2/hello.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 	<h1>Hello, world! <a href="#" onClick="hello();">Click me.</a></h1>
+	<h2><a href="writingassignments.html">Click here for week2 writing assignments!</a></h2>
 </body>
 </html>
