Added new CSS styles to personal site

--- a/projects/personal-site/hobbies.html
+++ b/projects/personal-site/hobbies.html
@@ -3,21 +3,28 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Hobbies</title>	
+		<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
 </head>
 <body>
-	<h1>My Favorite Hobbies</h1>
-	<ul>
-		<li><a href="index.html">Click to return to the homepage</a></li>
-		<li><a href="experience.html">Click to see my professional experience</a></li>
-		<li><a href="hobbies.html">You're currently on the hobbies page</a></li>
-		<li><a href="quotes.html">Click to see some of my favorite quotes</a></li>
-	</ul>
-	<img src="img/running.jpeg" alt="This is me!">
-	<h2>Here are some of the things I like to do with my free time</h2>
-	<ul>
-		<li>Weight lifting is my favorite hobby, and my best stress reliever</li>
-		<li>I'm an avid user of Netflix instant, and I love horror movies</li>
-		<li>Sprinting competitively was a big part of my life in high school, and I still love to compete whenever I can</li>
-	</ul>
+	<div class="container">
+		<h1>My Favorite Hobbies</h1>
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="experience.html">EXPERIENCE</a></li>
+				<li><a href="hobbies.html">HOBBIES</a></li>
+				<li><a href="quotes.html">QUOTES</a></li>
+			</ul>
+		</div>
+		<section id="main">
+			<img src="img/running.jpeg" alt="This is me!">
+			<h2>Here are some of the things I like to do with my free time</h2>
+			<ul>
+				<li>Weight lifting is my favorite hobby, and my best stress reliever</li>
+				<li>I'm an avid user of Netflix instant, and I love horror movies</li>
+				<li>Sprinting competitively was a big part of my life in high school, and I still love to compete whenever I can</li>
+			</ul>
+		</section>
+	</div>
 </body>
 </html>
