--- a/projects/personal-site/experience.html
+++ b/projects/personal-site/experience.html
@@ -3,22 +3,29 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Professional Experience</title>
+		<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
 </head>
 <body>
-	<h1>My Professional Experience</h1>
-	<ul>
-		<li><a href="index.html">Click to return to the homepage</a></li>
-		<li><a href="experience.html">You're currently on the experience page</a></li>
-		<li><a href="hobbies.html">Click to check out some of my hobbies</a></li>
-		<li><a href="quotes.html">Click to see some of my favorite quotes</a></li>
-	</ul>
-	<img src="img/ascot.jpeg" alt="Junior year I was president of the ASCOT Netowkring Group">
-	<h2>Job Experience Snapshot</h2>
-	<ul>
-		<li>Internet Marketing Consultant at Spartan Internet Consulting - Aug 2012 to Jan 2013</li>
-		<li>Junior Internet Marketing Consultant at Spartan Internet Consulting - Mar 2012 to Aug 2012</li>
-		<li>President at ASCOT Networking Group - Oct 2011 to Sep 2012 </li>
-		<li>Student Supervisor at Brody Square - Sep 2010 to May 2012</li>
-	</ul>
+	<div class="container">
+		<h1>My Professional Experience</h1>
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="experience.html">EXPERIENCE</a></li>
+				<li><a href="hobbies.html">HOBBIES</a></li>
+				<li><a href="quotes.html">QUOTES</a></li>
+			</ul>
+		</div>
+		<section id="main">
+			<img src="img/ascot.jpg" alt="Junior year I was president of the ASCOT Netowkring Group">
+			<h2>Job Experience Snapshot</h2>
+			<ul>
+				<li>Internet Marketing Consultant at Spartan Internet Consulting - Aug 2012 to Jan 2013</li>
+				<li>Junior Internet Marketing Consultant at Spartan Internet Consulting - Mar 2012 to Aug 2012</li>
+				<li>President at ASCOT Networking Group - Oct 2011 to Sep 2012 </li>
+				<li>Student Supervisor at Brody Square - Sep 2010 to May 2012</li>
+			</ul>
+		</section>
+	</div>
 </body>
 </html>
