--- a/projects/personal-site/index.html
+++ b/projects/personal-site/index.html
@@ -3,22 +3,29 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Nick Ohler's Personal Website</title>
+	<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
 </head>
 <body>
-	<h1>Welcome to Nick Ohler's Personal Website!</h1>
-	<ul>
-		<li><a href="index.html">You're currently on the homepage</a></li>
-		<li><a href="experience.html">Click to see my professional experience</a></li>
-		<li><a href="hobbies.html">Click to check out some of my hobbies</a></li>
-		<li><a href="quotes.html">Click to see some of my favorite quotes</a></li>
-	</ul>
-	<p>I'm glad you're here! I'm going to be building this site throughout the semester, so make sure to stay tuned for updates.</p>
-	<img src="img/mugshot.jpeg" alt="This is me!">
-	<h2>About me</h2>
-	<ul>
-		<li>Senior at Michigan State University</li>
-		<li>Pursing a Bachelors of Science in Media & Information</li>
-		<li>Originally from Clare, Michigan (The gateway to the North!)</li>
-	</ul>
+	<div class="container">
+		<h1>Welcome to Nick Ohler's Personal Website!</h1>
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="experience.html">EXPERIENCE</a></li>
+				<li><a href="hobbies.html">HOBBIES</a></li>
+				<li><a href="quotes.html">QUOTES</a></li>
+			</ul>
+		</div>
+		<section id="main">
+			<p>I'm glad you're here! I'm going to be building this site throughout the semester, so make sure to stay tuned for updates.</p>
+			<img src="img/mugshot.jpeg" alt="This is me!">
+			<h2>About me</h2>
+			<ul>
+				<li>Senior at Michigan State University</li>
+				<li>Pursuing a Bachelors of Science in Media & Information</li>
+				<li>Originally from Clare, Michigan (The gateway to the North!)</li>
+			</ul>
+		</section>
+	</div>
 </body>
 </html>
