--- a/projects/personal-site/quotes.html
+++ b/projects/personal-site/quotes.html
@@ -3,21 +3,28 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Favorite Quotes</title>
+		<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
 </head>
 <body>
-	<h1>My Favorite Quotes</h1>
-	<ul>
-		<li><a href="index.html">Click to return to the homepage</a></li>
-		<li><a href="experience.html">Click to see my professional experience</a></li>
-		<li><a href="hobbies.html">Click to check out some of my hobbies</a></li>
-		<li><a href="quotes.html">You're currently on the quotes page</a></li>
-	</ul>
-	<img src="img/bestbudaj.jpeg" alt="This is me!">
-	<h2>Here are some of my favorite quotes</h2>
-	<ul>
-		<li>"Speak softly and carry a big stick" - African Proverb</li>
-		<li>"I've failed over and over and over again in my life, and that's why I succeed" - Michael Jordan </li>
-		<li>"It's not whether you get knocked down, it's whether you get up" - Vince Lombardi</li>
-	</ul>
+	<div class="container">
+		<h1>My Favorite Quotes</h1>
+		<div class="nav">
+			<ul>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="experience.html">EXPERIENCE</a></li>
+				<li><a href="hobbies.html">HOBBIES</a></li>
+				<li><a href="quotes.html">QUOTES</a></li>
+			</ul>
+		</div>
+		<section id="main">
+			<img src="img/bestbudaj.jpg" alt="This is me!">
+			<h2>Here are some of my favorite quotes</h2>
+			<ul>
+				<li>"Speak softly and carry a big stick" - African Proverb</li>
+				<li>"I've failed over and over and over again in my life, and that's why I succeed" - Michael Jordan </li>
+				<li>"It's not whether you get knocked down, it's whether you get up" - Vince Lombardi</li>
+			</ul>
+		</section>
+	</div>
 </body>
 </html>
