New personal site layout

--- a/projects/personal-site/experience.html
+++ b/projects/personal-site/experience.html
@@ -16,8 +16,7 @@
 				<li><a href="quotes.html">QUOTES</a></li>
 			</ul>
 		</div>
-		<section id="main">
-			<img src="img/ascot.jpg" alt="Junior year I was president of the ASCOT Netowkring Group">
+		<section>
 			<h2>Job Experience Snapshot</h2>
 			<ul>
 				<li>Internet Marketing Consultant at Spartan Internet Consulting - Aug 2012 to Jan 2013</li>
@@ -26,6 +25,15 @@
 				<li>Student Supervisor at Brody Square - Sep 2010 to May 2012</li>
 			</ul>
 		</section>
+		<aside>
+			<div class="img">
+				<img src="img/ascot.jpg" alt="Junior year I was president of the ASCOT Netowkring Group">
+			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mollis purus sit amet diam dignissim vel imperdiet erat hendrerit. Integer viverra, massa eget iaculis scelerisque, magna erat dignissim nisi, ac venenatis arcu nisi nec urna. Praesent nunc erat, imperdiet nec laoreet at, vehicula eget augue. Vivamus tempus, lorem sit amet tincidunt tempor, neque sapien lobortis augue, lobortis sollicitudin ante lectus eget nisi. Quisque fermentum condimentum nisi, vitae blandit eros interdum et. Nam laoreet lacinia posuere. Nulla et mollis odio. Duis et quam diam. Donec id dolor vel metus facilisis porta vel vel erat. Phasellus id ligula et nulla ornare placerat. Nam vel orci nec mauris venenatis egestas. Vestibulum bibendum condimentum felis sed dapibus. Suspendisse at pharetra eros. Curabitur quis mauris sed turpis cursus lobortis. Mauris non nulla nec arcu interdum malesuada.</p>
+		</aside>	
+	</div>
+	<div class="footer">
+		<p>Nick Ohler's Personal Website</p>
 	</div>
 </body>
 </html>
