--- a/projects/personal-site/index.html
+++ b/projects/personal-site/index.html
@@ -16,9 +16,8 @@
 				<li><a href="quotes.html">QUOTES</a></li>
 			</ul>
 		</div>
-		<section id="main">
+		<section>
 			<p>I'm glad you're here! I'm going to be building this site throughout the semester, so make sure to stay tuned for updates.</p>
-			<img src="img/mugshot.jpeg" alt="This is me!">
 			<h2>About me</h2>
 			<ul>
 				<li>Senior at Michigan State University</li>
@@ -26,6 +25,20 @@
 				<li>Originally from Clare, Michigan (The gateway to the North!)</li>
 			</ul>
 		</section>
+		<aside>
+			<div class="img">
+				<img src="img/mugshot.jpeg" alt="That's me!">
+			</div>
+			<h2>About me</h2>
+			<ul>
+				<li>Senior at Michigan State University</li>
+				<li>Pursuing a Bachelors of Science in Media & Information</li>
+				<li>Originally from Clare, Michigan (The gateway to the North!)</li>
+			</ul>
+		</aside>
+	</div>
+	<div class="footer">
+		<p>Nick Ohler's Personal Website</p>
 	</div>
 </body>
 </html>
