--- a/projects/personal-site/quotes.html
+++ b/projects/personal-site/quotes.html
@@ -16,8 +16,7 @@
 				<li><a href="quotes.html">QUOTES</a></li>
 			</ul>
 		</div>
-		<section id="main">
-			<img src="img/bestbudaj.jpg" alt="This is me!">
+		<section>
 			<h2>Here are some of my favorite quotes</h2>
 			<ul>
 				<li>"Speak softly and carry a big stick" - African Proverb</li>
@@ -25,6 +24,15 @@
 				<li>"It's not whether you get knocked down, it's whether you get up" - Vince Lombardi</li>
 			</ul>
 		</section>
+		<aside>
+			<div class="img">
+				<img src="img/bestbudaj.jpg" alt="My best friend, Aj.">
+			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mollis purus sit amet diam dignissim vel imperdiet erat hendrerit. Integer viverra, massa eget iaculis scelerisque, magna erat dignissim nisi, ac venenatis arcu nisi nec urna. Praesent nunc erat, imperdiet nec laoreet at, vehicula eget augue. Vivamus tempus, lorem sit amet tincidunt tempor, neque sapien lobortis augue, lobortis sollicitudin ante lectus eget nisi. Quisque fermentum condimentum nisi, vitae blandit eros interdum et. Nam laoreet lacinia posuere. Nulla et mollis odio. Duis et quam diam. Donec id dolor vel metus facilisis porta vel vel erat. Phasellus id ligula et nulla ornare placerat. Nam vel orci nec mauris venenatis egestas. Vestibulum bibendum condimentum felis sed dapibus. Suspendisse at pharetra eros. Curabitur quis mauris sed turpis cursus lobortis. Mauris non nulla nec arcu interdum malesuada.</p>
+		</aside>
+	</div>
+	<div class="footer">
+		<p>Nick Ohler's Personal Website</p>
 	</div>
 </body>
 </html>
