first final commit

--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -1,40 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
+<DOCTYPE! HTML>
+
+<html>
 <head>
+	<script type="text/javascript" src="//use.typekit.net/tce8iqw.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>Nick Ohler's Personal Website</title>
-	<link rel="stylesheet" href="master.css" type="text/css" media="screen" title="no title">
+	<title>NickOhler.com</title>
+	<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
+	<script type="text/javascript">
+	var stay=confirm("The following site contains amateur web design. Please 'ok' to enter, 'cancel' to exit immediately!")
+	if (!stay)
+	window.location="http://www.yahoo.com"
+	</script>
+	</head>
 </head>
 <body>
 	<div class="container">
-		<h1>Welcome to Nick Ohler's Personal Website!</h1>
-		<section>
-			<p>I'm glad you're here! I'm going to be building this site throughout the semester, so make sure to stay tuned for updates.</p>
-			<h2>About me</h2>
-			<ul>
-				<li>Senior at Michigan State University</li>
-				<li>Pursuing a Bachelors of Science in Media & Information</li>
-				<li>Originally from Clare, Michigan (The gateway to the North!)</li>
-			</ul>
-			<h2>Connect with Me</h2>
+		<div class="container-hat">
+			<div class="nav">
 				<ul>
-					<li>"Facebook Link Goes Here"</li>
-					<li>"Twitter Link Goes Here"</li>
+					<li>Home</li><a href="http://nickohler.com"></a>
+					<li>Personal</li><a href="http://nickohler.com/personal.html"></a>
+					<li>Best In Tweet</li><a href="http://nickohler.com/bestintweet.html"></a>
+					<li>Professional</li><a href="http://nickohler.com/professional.html"></a>
 				</ul>
-			<h2>Favorite Videos of the Week</h2>
-			<p>This is where I will embed videos</p>
-		</section>
-		<aside>
-			<div class="img">
-				<img src="img/mugshot.jpeg" alt="That's me!">
 			</div>
-			<h2>About me</h2>
-			<ul>
-				<li>Senior at Michigan State University</li>
-				<li>Pursuing a Bachelors of Science in Media & Information</li>
-				<li>Originally from Clare, Michigan (The gateway to the North!)</li>
-			</ul>
-		</aside>
+			<div class="PageHead">
+				<p>Nick Ohler's Personal Website</p>
+			</div>
+			<div class="container-hat-flaps">
+				<img src="images/ContainerHatFlaps.gif" width="996" height="12" alt="ContainerHatFlaps">
+			</div>
+		</div>
+		<div class="left-bar">
+			<div class="icon1">
+				<a href="http://www.google.com"><img src="images/twitter.png" width="90" height="90" alt="Twitter"></a>
+			</div>
+			<div class="icon2">
+				<a href="http://www.hyperlinkcode.com"><img src="images/facebook.png" width="90" height="90" alt="Facebook"></a>
+			</div>
+			<div class="icon3">
+				<img src="images/linkedin.png" width="90" height="90" alt="Linkedin">
+			</div>
+			<div class="icon4">
+				<img src="images/stumble.png" width="90" height="90" alt="Stumbleupon">
+			</div>
+		</div>
+			<div class="BigBox">
+			<div class="BigBoxHat">
+				<div class="BigBoxHatFlaps">	
+					<img src="images/BigBoxHatFlaps.gif" width="500" height="12">
+				</div>
+			</div>
+			<div class="BigBoxContent">
+				<p>I'm glad you're here! I'm going to be updating this site throughout the semester, so make sure to stay tuned for updates.</p>
+			</div>
+		</div>
+		<div class="SmallBox">
+			<div class="SmallBoxHat">
+				<div class="SmallBoxHatFlaps">
+					<img src="images/SmallBoxHatFlaps.gif" width="310" height="12">
+				</div>
+			</div>
+			<div class="SmallBoxContent">
+				<h2>About Me</h2>
+				<ul>
+					<li>Senior at Michigan State University</li>
+					<li>Pursuing a bachelors degree in Media and Information</li>
+					<li>Originally from Clare, MI (The gateway to the North!)<li>
+				</ul>
+			</div>
+		</div>
+		<div class="SmallBox2">
+			<div class="SmallBoxHat2">
+				<div class="SmallBoxHatFlaps2">
+					<img src="images/SmallBoxHatFlaps.gif" width="310" height="12">
+				</div>
+			</div>
+			<div class="SmallBoxContent2">
+				<h2>Video of the Week</h2>
+			</div>
+		</div>
+		<div class="BigBox2">
+			<div class="BigBoxHat2">
+				<div class="BigBoxHatFlaps2">	
+					<img src="images/BigBoxHatFlaps.gif" width="500" height="12">
+				</div>
+			</div>
+			<div class="BigBoxContent2">
+			</div>
+		</div>
+		<div class="FullWidthBox2">
+			<div class="FullWidthBox2Hat">
+				<div class="FullWidthBox2HatFlaps">
+					<img src="images/FullWidthBoxHatFlaps.gif" width="850" height="12" alt="FullWidthBoxHatFlaps">
+				</div>
+			</div>
+			<div class="FullWidthBox2Content">
+				<div class="test-video">
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
