--- a/projects/final/personal.html
+++ b/projects/final/personal.html
@@ -1,30 +1,99 @@
-<!DOCTYPE>
-<html lang="en">
+<DOCTYPE! HTML>
+
+<html>
 <head>
+	<script type="text/javascript" src="//use.typekit.net/tce8iqw.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>Personal</title>	
-		<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
+	<title>NickOhler.com</title>
+	<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
 </head>
 <body>
 	<div class="container">
-		<h1>My Favorite Hobbies</h1>
-		<section>
-			<h2>Here are some of the things I like to do with my free time</h2>
-			<ul>
-				<li>Weight lifting is my favorite hobby, and my best stress reliever</li>
-				<li>I'm an avid user of Netflix instant, and I love horror movies</li>
-				<li>Sprinting competitively was a big part of my life in high school, and I still love to compete whenever I can</li>
-			</ul>
-			<h2>Photo Gallery</h2>
-			<p>This is where I will embed images</p>
-			<h2>Favorite Movies</h2>
-			<p>Post short movie reviews, etc.</p>
-		</section>
-		<aside>
-			<div class="img">
-				<img src="img/running.jpeg" alt="High shcool track.">
+		<div class="container-hat">
+			<div class="nav">
+				<ul>
+					<li>Home</li>
+					<li>Personal</li>
+					<li>Best In Tweet</li>
+					<li>Professional</li>
+				</ul>
 			</div>
-		</aside>	
+			<div class="PageHead">
+				<p>My Favorite Hobbies</p>
+			</div>
+			<div class="container-hat-flaps">
+				<img src="images/ContainerHatFlaps.gif" width="996" height="12" alt="ContainerHatFlaps">
+			</div>
+		</div>
+		<div class="left-bar">
+			<div class="icon1">
+				<a href="http://www.google.com"><img src="images/twitter.png" width="90" height="90" alt="Twitter"></a>
+			</div>
+			<div class="icon2">
+				<a href="http://www.hyperlinkcode.com"><img src="images/facebook.png" width="90" height="90" alt="Facebook"></a>
+			</div>
+			<div class="icon3">
+				<img src="images/linkedin.png" width="90" height="90" alt="Linkedin">
+			</div>
+			<div class="icon4">
+				<img src="images/stumble.png" width="90" height="90" alt="Stumbleupon">
+			</div>
+		</div>
+			<div class="BigBox">
+			<div class="BigBoxHat">
+				<div class="BigBoxHatFlaps">	
+					<img src="images/BigBoxHatFlaps.gif" width="500" height="12">
+				</div>
+			</div>
+			<div class="BigBoxContent">
+				<h2>What I Do With My Free Time</h2>
+					<ul>
+						<li>Weight lifting is my favorite hobby and my stress reliever</li>
+						<li>I'm an avid Netflix Instant user, and I love horror movies</li>
+						<li>Sprinting competitively was a big part of my life in high school, I still love to compete whenever I can</li>
+					</ul>
+			</div>
+		</div>
+		<div class="SmallBox">
+			<div class="SmallBoxHat">
+				<div class="SmallBoxHatFlaps">
+					<img src="images/SmallBoxHatFlaps.gif" width="310" height="12">
+				</div>
+			</div>
+			<div class="SmallBoxContent">
+				<h2>Photos</h2>
+			</div>
+		</div>
+		<div class="SmallBox2">
+			<div class="SmallBoxHat2">
+				<div class="SmallBoxHatFlaps2">
+					<img src="images/SmallBoxHatFlaps.gif" width="310" height="12">
+				</div>
+			</div>
+			<div class="SmallBoxContent2">
+			</div>
+		</div>
+		<div class="BigBox2">
+			<div class="BigBoxHat2">
+				<div class="BigBoxHatFlaps2">	
+					<img src="images/BigBoxHatFlaps.gif" width="500" height="12">
+				</div>
+			</div>
+			<div class="BigBoxContent2">
+			</div>
+		</div>
+		<div class="FullWidthBox2">
+			<div class="FullWidthBox2Hat">
+				<div class="FullWidthBox2HatFlaps">
+					<img src="images/FullWidthBoxHatFlaps.gif" width="850" height="12" alt="FullWidthBoxHatFlaps">
+				</div>
+			</div>
+			<div class="FullWidthBox2Content">
+				<div class="test-video">
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
