--- a/projects/final/bestintweet.html
+++ b/projects/final/bestintweet.html
@@ -1,22 +1,98 @@
+<DOCTYPE! HTML>
 
-<!DOCTYPE>
-<html lang="en">
+<html>
 <head>
+	<script type="text/javascript" src="//use.typekit.net/tce8iqw.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>Best In Tweet</title>
-		<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
+	<title>NickOhler.com</title>
+	<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="no title">
+	<script type="text/javascript">
+	var stay=confirm("The following site contains appalling material suitable only for webmasters. Please 'ok' to enter, 'cancel' to exit immediately!")
+	if (!stay)
+	window.location="http://www.yahoo.com"
+	</script>
+	</head>
 </head>
 <body>
 	<div class="container">
-		<h1>My Favorite Tweets</h1>
-		<section>
-			<h2>The best tweets of the week</h2>
-		</section>
-		<aside>
-			<div class="img">
-				<img src="img/bestbudaj.jpg" alt="My best friend, Aj.">
+		<div class="container-hat">
+			<div class="nav">
+				<ul>
+					<li>Home</li>
+					<li>Personal</li>
+					<li>Best In Tweet</li>
+					<li>Professional</li>
+				</ul>
 			</div>
-		</aside>
+			<div class="PageHead">
+				<p></p>
+			</div>
+			<div class="container-hat-flaps">
+				<img src="images/ContainerHatFlaps.gif" width="996" height="12" alt="ContainerHatFlaps">
+			</div>
+		</div>
+		<div class="left-bar">
+			<div class="icon1">
+				<a href="http://www.google.com"><img src="images/twitter.png" width="90" height="90" alt="Twitter"></a>
+			</div>
+			<div class="icon2">
+				<a href="http://www.hyperlinkcode.com"><img src="images/facebook.png" width="90" height="90" alt="Facebook"></a>
+			</div>
+			<div class="icon3">
+				<img src="images/linkedin.png" width="90" height="90" alt="Linkedin">
+			</div>
+			<div class="icon4">
+				<img src="images/stumble.png" width="90" height="90" alt="Stumbleupon">
+			</div>
+		</div>
+			<div class="BigBox">
+			<div class="BigBoxHat">
+				<div class="BigBoxHatFlaps">	
+					<img src="images/BigBoxHatFlaps.gif" width="500" height="12">
+				</div>
+			</div>
+			<div class="BigBoxContent">
+			</div>
+		</div>
+		<div class="SmallBox">
+			<div class="SmallBoxHat">
+				<div class="SmallBoxHatFlaps">
+					<img src="images/SmallBoxHatFlaps.gif" width="310" height="12">
+				</div>
+			</div>
+			<div class="SmallBoxContent">
+			</div>
+		</div>
+		<div class="SmallBox2">
+			<div class="SmallBoxHat2">
+				<div class="SmallBoxHatFlaps2">
+					<img src="images/SmallBoxHatFlaps.gif" width="310" height="12">
+				</div>
+			</div>
+			<div class="SmallBoxContent2">
+			</div>
+		</div>
+		<div class="BigBox2">
+			<div class="BigBoxHat2">
+				<div class="BigBoxHatFlaps2">	
+					<img src="images/BigBoxHatFlaps.gif" width="500" height="12">
+				</div>
+			</div>
+			<div class="BigBoxContent2">
+			</div>
+		</div>
+		<div class="FullWidthBox2">
+			<div class="FullWidthBox2Hat">
+				<div class="FullWidthBox2HatFlaps">
+					<img src="images/FullWidthBoxHatFlaps.gif" width="850" height="12" alt="FullWidthBoxHatFlaps">
+				</div>
+			</div>
+			<div class="FullWidthBox2Content">
+				<div class="test-video">
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
