--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -19,7 +19,7 @@
 		<div class="container-hat">
 			<div class="nav">
 				<ul>
-					<li>Home</li><a href="http://nickohler.com"></a>
+					<li><a href="http://nickohler.com"></a>Home</li>
 					<li>Personal</li><a href="http://nickohler.com/personal.html"></a>
 					<li>Best In Tweet</li><a href="http://nickohler.com/bestintweet.html"></a>
 					<li>Professional</li><a href="http://nickohler.com/professional.html"></a>
@@ -67,7 +67,7 @@
 				<ul>
 					<li>Senior at Michigan State University</li>
 					<li>Pursuing a bachelors degree in Media and Information</li>
-					<li>Originally from Clare, MI (The gateway to the North!)<li>
+					<li>Originally from Clare, MI (The gateway to the North!)</li>
 				</ul>
 			</div>
 		</div>
